--- a/stylo.css
+++ b/stylo.css
@@ -1,25 +1,46 @@
 #numbersContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-    width: 50vh;
-    padding-left: 640px;
-    padding-top: 100px;
-}
-.btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: 0 0 30%;
-    height: 100px;
-    background-color: #e6e6e6;
-    border: 1px solid #ccc;
-    margin: 1px;
-    color: gray;
+    display: grid;
+    grid-template-rows: repeat(6, 100px);
+    grid-template-columns: repeat(4, 100px);
+    grid-auto-rows: 50px;
+    border: 5px solid black;
+    background-color: #B1B2B4;
+    grid-gap: 10px;
+    padding: 70px 55px 0px 20px;
+    height: 560px;
+    width: 400px;
+    margin-left: 44rem;
+    margin-top: 10rem;
 }
 
-h1 {
-    text-align: center;
+#btnEnter {
+    grid-area: 4/4/6/4;
+}
+
+#btnZero {
+    grid-area: 5/1/5/3;
+}
+
+#btnDecimal {
+    grid-area: 5/3/5/3;
+}
+
+#btnPlus{
+    grid-area: 2/4/4/4;
+    
+}
+
+*{
+    background-color: #b0b1b3;
+}
+button {
+    background-color: #afb0b2;
+    border: 5px solid #030406;
+    border-radius: 1rem;
+    color: #494a4c;
+}
+
+
+html, body {
+    background-color: #050608;
 }
