--- a/stylo.css
+++ b/stylo.css
@@ -1,18 +1,46 @@
-#numbersContainer {
-    display: grid;
-    grid-template-rows: repeat(6, 100px);
-    grid-template-columns: repeat(4, 100px);
-    grid-auto-rows: 50px;
-    border: 5px solid black;
-    background-color: #B1B2B4;
-    grid-gap: 10px;
-    padding: 70px 55px 0px 20px;
-    height: 560px;
-    width: 400px;
-    margin-left: 44rem;
-    margin-top: 10rem;
-}
 
+#gridContainer {
+    display: grid;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    border: 5px solid black;
+    background-color: hsl(220deg 2% 76%);
+    padding: 15px;
+    height: 650px;
+    width: 440px;
+    margin-left: 44rem;
+    margin-top: 05rem;
+    border-radius: 2rem;
+  }
+  
+  #topContainer {
+    grid-area: 1 / 1 / 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 100px;
+    grid-gap: 10px;
+    align-items: center;
+  }
+
+  .box-container {
+    display: grid;
+    grid-template-columns: repeat(2, 20px);
+    grid-template-rows: repeat(2, 20px);
+    grid-gap: 2px;
+    margin-left: 47px;
+}
+  .grid-item {
+    background-color: gray;
+    text-align: center;
+}
+  
+  #numpadContainer {
+    grid-area: 2 / 1 / 7 / 5;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+  }
 #btnEnter {
     grid-area: 4/4/6/4;
 }
@@ -27,17 +55,19 @@
 
 #btnPlus{
     grid-area: 2/4/4/4;
-    
 }
 
-*{
-    background-color: #b0b1b3;
+#btnPic {
+    height: 50px;
+    width: 100px;
 }
+
 button {
-    background-color: #afb0b2;
+    background-color: hsl(220deg 2% 76%);
     border: 5px solid #030406;
     border-radius: 1rem;
-    color: #494a4c;
+    color: hsl(220deg 2% 30%);
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
 
 
