--- a/stylo.css
+++ b/stylo.css
@@ -4,14 +4,14 @@
     grid-template-rows: 60px 1fr;
     grid-template-columns: 1fr;
     grid-gap: 10px;
-    border: 5px solid black;
-    background-color: hsl(220deg 2% 76%);
+    border: 2px solid black;
     padding: 15px;
     height: 650px;
     width: 440px;
     margin-left: 44rem;
     margin-top: 05rem;
     border-radius: 2rem;
+    box-shadow: inset 0px -5px 15px hsl(220deg 2% 38%);
   }
   
   #topContainer {
@@ -61,16 +61,23 @@
     height: 50px;
     width: 100px;
 }
-
+@import url('https://fonts.googleapis.com/css?family=San+Francisco&display=swap');
 button {
-    background-color: hsl(220deg 2% 76%);
-    border: 5px solid #030406;
-    border-radius: 1rem;
+    border: 4px solid hsl(220deg 23% 3%);
+    border-radius: 0.9rem;
     color: hsl(220deg 2% 30%);
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+    font-family: 'San Francisco', sans-serif;
+    font-size: 25px;
+    font-weight: 300;
+    box-shadow: -5px 5px 10px #888888,
+                inset 0px -5px 15px #888888;
 }
 
 
 html, body {
     background-color: #050608;
+}
+
+#gridContainer, button {
+    background-color: hsl(220deg 2% 70%);
 }
