--- a/stylo.css
+++ b/stylo.css
@@ -33,8 +33,11 @@
     background-color: gray;
     text-align: center;
 }
-  
-  #numpadContainer {
+.box-container:hover .grid-item {
+    background-color: rgb(140, 202, 240);
+  }
+
+#numpadContainer {
     grid-area: 2 / 1 / 7 / 5;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
@@ -95,3 +98,10 @@ html, body {
     box-shadow: -1px 2px 3px hsl(220deg 2% 38%),
                 inset 0px 0px 3px hsl(220deg 2% 38%);
   }
+
+
+  button:hover {
+    background-color: hsl(240, 1%, 77%);
+    color: black;
+  }
+
