added event listener to display the values of each button pressed

--- a/stylo.css
+++ b/stylo.css
@@ -55,6 +55,12 @@
     transform: rotate(-45deg);
   }
 
+  .display {
+    font-family: 'Alterebro Pixel Font';
+    font-size: x-large;
+    margin-left: 4px;
+  }
+
 /* this is for the left panel */
   .popup-left {
     position: absolute;
