--- a/stylo.css
+++ b/stylo.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Alterebro Pixel Font';
+  src: url(/alterebro_pixel_font/alterebro-pixel-font.ttf);
+}
+
 
 .popup {
     width: 500px;
@@ -9,7 +14,7 @@
     margin-top: 2rem;
   }
   #untitled {
-    font-family: 'Alterebro Pixel Font';
+    font-family: 'Alterebro Pixel Font', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: x-large;
     margin-left: 4px;
   }
